@@ -1,3 +1,9 @@
+2003-05-13	ujwal
+
+    * Fixed a pretty big memory leak where the text views were 
+      being released and freed.
+
+
 2003-05-12	ujwal
 
     * Moved AddressBook file to new location under 
